# irminsul

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
crates/wa-binary/: Cargo.toml
crates/wa-binary/src/: codec.rs  jid.rs  lib.rs  node.rs  tokens.rs
crates/wa-client/: Cargo.toml
crates/wa-client/examples/: custom_auth_store.rs  live_business_catalog.rs  live_business_collections.rs  live_business_cover_photo.rs  live_business_media.rs  live_business_order_details.rs  live_business_profile.rs  live_business_profile_update.rs  live_chat_pin.rs  live_community.rs  live_document_thumbnail.rs  live_generated_link_preview.rs  live_group.rs  live_group_send.rs  live_history_sync.rs  live_link_preview.rs  live_media.rs  live_media_retry.rs  live_newsletter.rs  live_pairing_code.rs  live_profile_picture.rs  live_receive.rs  live_status.rs  live_text.rs  live_video_thumbnail.rs  session_pairing.rs
crates/wa-client/src/: lib.rs  tests_chunk_1.rs  tests_chunk_2.rs  tests_chunk_3.rs  tests_chunk_4.rs  tests_chunk_5.rs  tests_chunk_6.rs  tests_chunk_7.rs  tests_chunk_8.rs
crates/wa-client/tests/: live_e2e.rs
crates/wa-core/: Cargo.toml
crates/wa-core/src/: account.rs  app_state.rs  auth.rs  business.rs  chat.rs  community.rs  config.rs  connection.rs  error.rs  event.rs  group.rs  history.rs  inbound.rs  lib.rs  media.rs  message.rs  mex.rs  newsletter.rs  noise.rs  pairing.rs  payload.rs  placeholder.rs  pre_keys.rs  query.rs  receive.rs  reporting.rs  retry.rs  router.rs  signal.rs  tctoken.rs  thumbnail.rs  usync.rs  validation.rs  websocket.rs
crates/wa-crypto/: Cargo.toml
crates/wa-crypto/src/: app_state.rs  keys.rs  lib.rs  media.rs  noise.rs  primitives.rs  secret.rs
crates/wa-proto/: Cargo.toml
crates/wa-proto/src/: generated.rs  lib.rs
crates/wa-store/: Cargo.toml
crates/wa-store/src/: lib.rs  memory.rs  sqlite.rs  traits.rs
crates/wa-testkit/: Cargo.toml
crates/wa-testkit/src/: lib.rs
crates/wa-testkit/tests/: binary_node_fixtures.rs  signal_fixtures.rs
docs/: api_transition_guide.md  baileys_rust_rewrite_plan.md  examples.md  feature_support_matrix.md  signal_wireformat_fix_plan.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: account_call_notification_parse.rs  app_state_node_parse.rs  app_state_patch_decode.rs  binary_node_decode.rs  business_notification_parse.rs  chat_account_parse.rs  community_surface_parse.rs  decompressing_if_required.rs  group_notification_parse.rs  history_sync_decode.rs  inbound_node_decode.rs  jid_decode.rs  media_retry_parse.rs  newsletter_notification_parse.rs  noise_frame_decode.rs  retry_receipt_parse.rs  signal_stateful_records.rs  signal_wire_decode.rs  tc_token_parse.rs  usync_result_parse.rs
tests/fixtures/: signal_conformance.json  signal_group_conformance.json
tests/fixtures/binary_nodes/: manifest.json
tests/fixtures/signal/: manifest.json
tools/: run_wa_client_tests.sh
tools/compat/: README_signal_conformance.md  generate-binary-node-fixtures.mjs  signal_conformance_emit.cjs  signal_group_conformance_emit.cjs  signal_wireformat_oracle.cjs
tools/proto-gen/: Cargo.toml
tools/proto-gen/src/: main.rs
tools/token-gen/: token-gen.mjs
wiki/: HEPHAES.md  glossary.md  index.md  log.md  overview.md
wiki/architecture/: connection-stack.md
wiki/concepts/: app-state-sync.md  binary-node.md  event-model.md  jid.md  media-transfer.md  noise-handshake.md  signal-protocol.md
wiki/decisions/: permissive-clean-room.md  wa-client-test-chunking.md
wiki/flows/: pairing.md  receive-message.md  send-message.md
wiki/modules/: wa-binary.md  wa-client.md  wa-core.md  wa-crypto.md  wa-proto.md  wa-store.md  wa-testkit.md
