[workspace]
resolver = "3"
members = [
    "crates/wa-binary",
    "crates/wa-client",
    "crates/wa-core",
    "crates/wa-crypto",
    "crates/wa-proto",
    "crates/wa-store",
    "crates/wa-testkit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.96"
license = "MIT"
authors = ["WhatsApp Agent Contributors"]

[workspace.dependencies]
async-trait = "0.1.89"
aes = "0.8.4"
aes-gcm = "0.10.3"
base64 = "0.22.1"
bytes = "1.11.0"
cbc = "0.1.2"
ctr = "0.9.2"
flate2 = "1.1.5"
futures = "0.3.31"
hkdf = "0.12.4"
hmac = "0.12.1"
md-5 = "0.10.6"
pbkdf2 = "0.12.2"
prost = "0.14.4"
rand = "0.9.2"
reqwest = { version = "0.13.4", default-features = false }
rusqlite = "0.40.1"
secrecy = "0.10.3"
serde = "1.0.228"
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = "1.48.0"
tokio-stream = "0.1.17"
tokio-tungstenite = { version = "0.29.0", default-features = false }
tracing = "0.1.43"
xeddsa = { version = "1.1.0", default-features = false, features = ["xed25519"] }
x25519-dalek = "2.0.1"
zeroize = "1.8.2"
