[package]
name = "wa-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["websocket", "rustls", "noise"]
websocket = ["dep:futures", "dep:tokio-tungstenite", "tokio/net"]
rustls = ["websocket", "tokio-tungstenite/rustls-tls-webpki-roots"]
native-tls = ["websocket", "tokio-tungstenite/native-tls"]
noise = ["dep:base64", "dep:wa-crypto", "dep:zeroize"]
http-media = ["noise", "dep:reqwest", "reqwest/rustls", "reqwest/stream", "dep:futures"]
image = ["dep:image"]
link-preview = ["noise", "dep:reqwest", "reqwest/rustls", "reqwest/stream", "dep:futures"]

[dependencies]
async-trait.workspace = true
base64 = { workspace = true, optional = true }
bytes.workspace = true
flate2.workspace = true
futures = { workspace = true, optional = true }
image = { workspace = true, optional = true }
md-5.workspace = true
prost.workspace = true
rand.workspace = true
reqwest = { workspace = true, optional = true }
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "rt", "sync", "time"] }
tokio-stream.workspace = true
tokio-tungstenite = { workspace = true, optional = true, default-features = false, features = ["connect"] }
tracing.workspace = true
wa-binary = { path = "../wa-binary" }
wa-crypto = { path = "../wa-crypto", optional = true }
wa-proto = { path = "../wa-proto" }
wa-store = { path = "../wa-store" }
zeroize = { workspace = true, optional = true }

[dev-dependencies]
proptest = "1.9.0"
tokio = { workspace = true, features = ["macros", "net", "rt", "time"] }
