[package]
name = "wa-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["sqlite", "bundled-sqlite"]
sqlite = ["dep:rusqlite"]
bundled-sqlite = ["rusqlite?/bundled"]
memory = []

[dependencies]
async-trait.workspace = true
rusqlite = { workspace = true, optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }
zeroize.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
